add write poly quartets and tests

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "id": "10ce8d86",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "id": "0a81d08c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "id": "ddcf8b12",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "id": "1ffee755",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "id": "6d9716bc",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "Clade(name='A')"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "id": "800e1445",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "id": "a4ca0bfe",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "id": "136b1f1d",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "id": "0388ea29",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "id": "5940b0a3",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "[Clade(name='A'), Clade(name='B'), Clade(name='C')]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 12,
    "id": "18a73662",
    "metadata": {},
    "outputs": [
@@ -191,20 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 13,
    "id": "5544a762",
    "metadata": {},
    "outputs": [],
    "source": [
     "polytomies = list(filter(\n",
-    "    lambda x : len(x.clades) > 2,\n",
+    "    lambda x : \n",
+    "        len(x.clades) > 2 if x != tree.root\n",
+    "        else len(x.clades) > 3\n",
+    "    ,\n",
     "    tree.find_clades(),\n",
     "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 14,
    "id": "fd11920f",
    "metadata": {},
    "outputs": [],
@@ -214,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 15,
    "id": "71113b19",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_1': {}, '_2': {}, '_3': {}, '_4': {}}"
+       "{'_2': {}, '_3': {}, '_4': {}}"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 16,
    "id": "11de05d0",
    "metadata": {},
    "outputs": [
@@ -243,8 +246,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "poly=Clade(name='_1') parent=None\n",
-      "9\n",
       "poly=Clade(name='_2') parent=Clade(name='_1')\n",
       "9\n",
       "poly=Clade(name='_3') parent=Clade(name='_1')\n",
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 17,
    "id": "4874ef6b",
    "metadata": {},
    "outputs": [],
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "48778011",
    "metadata": {},
    "outputs": [],
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3a577d0b",
    "metadata": {},
    "outputs": [
@@ -343,8 +344,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "df4e9ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "from pathlib import Path\n",
+    "\n",
+    "output_path = \"/projects/illinois/eng/cs/warnow/zxliu2/QuartetPolytomy/tmp\"\n",
+    "run_name = \"test_qp\"\n",
+    "\n",
+    "FOLDER = Path(output_path) / run_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "588a8e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_2\n",
+      "_3\n",
+      "_4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for polytomy in polytomies:\n",
+    "    print(polytomy.name)\n",
+    "    polytomy_folder = FOLDER / polytomy.name\n",
+    "    os.makedirs(polytomy_folder, exist_ok=True)\n",
+    "    # what happens if the leafset is not fully determined? for neighbours a,b,c,d add \n",
+    "    # ab|cd, ac|bd, and ad|bc so that no bias\n",
+    "    # and make sure each leaf is in at least one quartet.\n",
+    "    with open(polytomy_folder / 'quartets.nwk', 'w') as qf:\n",
+    "        poly_neighbours = list(set(poly_label_map[polytomy.name].values())) # \n",
+    "        for i in range(len(poly_neighbours) - 3):\n",
+    "            a, b, c, d = poly_neighbours[i:i+4]\n",
+    "            qf.write(f'(({a},{b}),({c},{d}));\\n')\n",
+    "            qf.write(f'(({a},{c}),({b},{d}));\\n')\n",
+    "            qf.write(f'(({a},{d}),({c},{d}));\\n')\n",
+    "\n",
+    "        for (a, b, c, d), w in polytomy_quartets[polytomy.name].items():\n",
+    "            qf.write(f'(({a},{b}),({c},{d}));\\n' * w)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10083bfa",
    "metadata": {},
    "outputs": [],
    "source": []
